@@ -187,11 +187,18 @@ proc qmaster_spooling_ar_restart {} {
       set actual_host [host_conf_get_suited_hosts]
       set qinstance [get_queue_instance "all.q" $actual_host]
 
+      set now [clock seconds]
+      set start  [clock format [expr $now + 20000] -format "%Y%m%d%H%M.%S"]
+      set starto [clock format [expr $now + 20000] -format "%m/%d/%Y %H:%M:%S"]
+      set end    [clock format [expr $now + 23661] -format "%Y%m%d%H%M.%S"]
+      set endo   [clock format [expr $now + 23661] -format "%m/%d/%Y %H:%M:%S"]
+
+
       #  To be sure, no conflict exists
       delete_all_ars   
 
-      set    args "-a 1101010101 "
-      append args "-e 1201010101 "
+      set    args "-a $start "
+      append args "-e $end "
       append args "-A test_ar_account "
       append args "-ckpt test_ar_ckpt "
       append args "-he yes "
@@ -215,9 +222,9 @@ proc qmaster_spooling_ar_restart {} {
       set check_values(name)                           "test_ar_name"
       set check_values(owner)                          "$CHECK_USER"  
       set check_values(checkpoint_name)                "test_ar_ckpt"
-      set check_values(start_time)                     "01/01/2011 01:01:00"
-      set check_values(end_time)                       "01/01/2012 01:01:00"
-      set check_values(duration)                       "8760:00:00"
+      set check_values(start_time)                     "$starto"
+      set check_values(end_time)                       "$endo"
+      set check_values(duration)                       "01:01:01"
       set check_values(group)                          "staff"
       set check_values(account)                        "test_ar_account"
       set check_values(resource_list)                  "h_rt=200, hostname=${actual_host}"
