@@ -4694,7 +4694,7 @@ proc submit_job {args {raise_error 1} {submit_timeout 60} {host ""} {user ""} {c
 
    # we first want to parse errors first, then the positive messages, 
    # as e.g. an immediate job might be correctly submitted, but then cannot be scheduled
-   set messages(index) "-3 -6 -7 -8 -9 -10 -11 -12 -13 -14 -15 -16 -17 -18 -19 -20 -21 -22 -23 -24 -25 -26 -27 -28 -29 -30 -31 -32 -33 -34"
+   set messages(index) "-3 -6 -7 -8 -9 -10 -11 -12 -13 -14 -15 -16 -17 -18 -19 -20 -21 -22 -23 -24 -25 -26 -27 -28 -29 -30 -31 -32 -33 -34 -35"
    append messages(index) " 0 1 2"
 
    # success messages:
@@ -4719,7 +4719,8 @@ proc submit_job {args {raise_error 1} {submit_timeout 60} {host ""} {user ""} {c
       set messages(-26)    "blah blah blah no INVALID_JOB_REQUEST in 5.3"
       set messages(-28)    "*[translate_macro MSG_JOB_QUNKNOWN_S "*"]*"
       set messages(-29)    "blah blah blah no POSITIVE_PRIO in 5.3"
-   } else {
+      set messages(-35)    "blah blah blah no POSITIVE_PRIO in 5.3"
+    } else {
       # 6.0 and higher
       set messages(-14)   "TODO: jobnet handling changed, old message NON_AMBIGUOUS"
       set messages(-15)   "TODO: jobnet handling changed, old message UNAMBIGUOUSNESS"
@@ -4730,9 +4731,11 @@ proc submit_job {args {raise_error 1} {submit_timeout 60} {host ""} {user ""} {c
 
       if {$ts_config(gridengine_version) == 60} {
          set messages(-29)    "blah blah blah no POSITIVE_PRIO in 6.0"
-      } else {
+         set messages(-35)    "blah blah blah no POSITIVE_PRIO in 6.0"
+       } else {
          # 6.1 and higher
          set messages(-29)    "*[translate_macro MSG_JOB_NONADMINPRIO]*"
+         set messages(-35)    "*[translate_macro MSG_JOB_HRTLIMITTOOLONG_U "*"]*"
       }
    }
    
