@@ -1,3 +1,8 @@
+PJ-2007-06-01-0: Enhancem.: Improving the test usage of time limits
+                            Adding one test to advance_reservation
+                            Making the test outputs more readable
+                 Review:    JG
+                 
 JG-2007-06-01-0: Enhancem.: Made shadowd_migrate test more fault tolerant 
                             to slow NFS.
                  Review:    CR
